# Kudbee-Quant-Bot-v1.0

./: .dockerignore  .env.example  .gitignore  404.html  CLAUDE.md  Dockerfile  README.md  SECURITY.md  _headers  about.html  be-report.html  compare.html  contact.html  dashboard.html  fly.toml  glossary.html  index.html  lab.html  leverage-report.html  live-signals.html  llms.txt  methodology.html  netlify.toml  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  robots.txt  site.webmanifest  sitemap.xml  start-here.html  tailwind.config.js  trade-flow.html  trade-story.html
blog/: 5-backtesting-mistakes.html  how-to-read-a-sharpe-ratio.html  index.html  momentum-vs-mean-reversion.html  position-sizing-and-risk-management.html  signals-vs-strategies.html  what-is-backtesting.html  what-is-drawdown.html
config/: crypto_universe.yaml
data/: biases.json  cycle_backtest_matrix.json  cycle_backtest_results.json  excursion_audit.json  execution_backtest_results.json  exit_geometry_5m.json  feature_flags.json  heartbeat.json  journal.json  notify_state.json  overnight_queue.json  overnight_results.json  reflection.json  zec_orderbook_fill_backtest.csv
deploy/: entrypoint.sh  journal_sync.py
docs/: AGENT_ORCHESTRATION_LEDGER.md  BRAIN.md  CROSSROADS.md  DEPLOY.md  EXECUTION_BACKTEST.md  HANDOFF.md  HOSTING.md  KESTRA_AUTOMATION.md  LIVE_TRADING_SETUP.md  MEMORY.md  NOTIFICATIONS.md  OPEN_SETUPS.md  PHILOSOPHY.md  RELIABLE_TRIGGER.md  SESSION_PROTOCOL.md  TOP100_1H_UNIVERSE.md  TRADE_REVIEW_SKILLS.md  dsa_study_plan.md  qa.md  (+1 more)
(+426 files in other folders)
